# cmake_tests_colors

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_windows_test.bat
include/colors/: basic_colors.h  black.h  ginger.h  rgb.h  white.h
src/: basic_colors.cpp  black.cpp  ginger.cpp  rgb.cpp  white.cpp
test/: hex_to_rgb.cpp  main.cpp  rgb.cpp  rgb_custom_literal.cpp  rgb_to_hex.cpp
